# napari-movie-maker

./: README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-08-napari-movie-maker-design.md
src/napari_movie_maker/: __init__.py  _backend.py  _headless.py  _widget.py  napari.yaml
tests/: test_backend.py  test_headless.py  test_manifest.py  test_widget.py
