[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-movie-maker"
version = "0.1.0"
description = "A compact napari plugin for exporting canvas-only axis sweep movies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "napari Movie Maker contributors" },
]
dependencies = [
    "imageio",
    "imageio-ffmpeg",
    "napari",
    "numpy",
    "qtpy",
]
classifiers = [
    "Framework :: napari",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.entry-points."napari.manifest"]
napari-movie-maker = "napari_movie_maker:napari.yaml"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_movie_maker = ["napari.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
